# groggy

./: .gitignore  .readthedocs.yaml  404.html  AGENTS.md  ALGORITHM_API_SUMMARY.md  ALGORITHM_BENCHMARK_OPTIMIZATION.md  ALGORITHM_CORE_MISMATCH_ANALYSIS.md  ALGORITHM_PERFORMANCE_ANALYSIS.md  ANALYSIS_COMPLETE_SUMMARY.md  APPLY_API_ENHANCEMENTS.md  ARCHITECTURE_VALIDATION.md  ARRAY_SLICING_FIX_SUMMARY.md  BATCHES_1_2_FINAL_SUMMARY.md  BATCH_1_COMPLETE_SUMMARY.md  BATCH_1_PROGRESS.md  BATCH_2_COMPLETE_SUMMARY.md  BATCH_2_PLAN_COMMUNITY_DETECTION.md  BATCH_2_REVISED_PLAN.md  BENCHMARK_PERSIST_FALSE_UPDATE.md  BETWEENNESS_OPTIMIZATION_COMPLETE.md  BRANCH_SUMMARY.md  BUILDER_ALGO_DEBUG_STATUS.md  BUILDER_API_DESIGN.md  BUILDER_API_IMPROVEMENTS.md  BUILDER_BEFORE_AFTER.md  BUILDER_COMPLETE_SUMMARY.md  BUILDER_COMPLETION_SUMMARY.md  BUILDER_DEBUGGING_STOPPING_POINT.md  BUILDER_DEBUG_NODE_DEGREES_ISSUE.md  BUILDER_DEBUG_SESSION_SUMMARY.md  BUILDER_DEBUG_STOPPING_POINT.md  BUILDER_DEGREES_BUG_ANALYSIS.md  BUILDER_DSL_REFACTOR_PLAN.md  BUILDER_DSL_REFACTOR_STATUS.md  BUILDER_ENHANCEMENTS_SUMMARY.md  BUILDER_FFI_BOTTLENECK_ANALYSIS.md  BUILDER_FFI_OPTIMIZATION_PLAN.md  BUILDER_FINAL_STATUS.md  BUILDER_IR_OPTIMIZATION_PLAN.md  BUILDER_NODE_PROXY_ATTR_BUG.md  (+696 more)
python-groggy/: CLEANUP_SUMMARY.md  Cargo.toml  PHASE_1_2_USAGE_EXAMPLE.py  STORAGE_VIEW_UNIFICATION.md  check_api.py  comprehensive_test_results.md  debug_bfs_test.py  debug_mysterious_subgraphs.py  debug_property_access.py  debug_server.py  large_bfs_test.py  pyproject.toml  stress_test.py  test_all_algorithms.py  test_all_traversals.py  test_benchmark_size.py  test_cache_sequence.py  test_cached_filters.py  test_components_array.py  test_comprehensive_integration.py  test_direct_graph_methods.py  test_path_result.py  test_pathresult_performance.py  test_view_caching.py  unused_symbols.jsonl  unused_symbols.txt
python-groggy/.cargo/: config.toml
python-groggy/docs/: graph_actions_cookbook.md  validation_test_suite.py
python-groggy/docs/tutorials/: temporal_graph_analysis.md
python-groggy/js-widget/: groggy-widget-0.1.0.tgz  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.standalone.config.js
python-groggy/js-widget/lib/: core.d.ts  index.d.ts  index.js  index.js.map  plugin.js  plugin.js.map  widget.d.ts  widget_unified.d.ts
python-groggy/js-widget/lib/core/: InteractionEngine.d.ts  PhysicsEngine.d.ts  SVGRenderer.d.ts  VizCore.d.ts  index.d.ts
python-groggy/js-widget/src/: core.ts  extension.ts  index.ts  plugin.ts  types.d.ts  widget.ts  widget_unified.ts
python-groggy/js-widget/src/core/: InteractionEngine.js  PhysicsEngine.js  SVGRenderer.js  VizCore.js  index.js
python-groggy/python/groggy/: __init__.py  __init__.pyi  _frontend.py  _groggy.pyi  builder.py  builder.pyi  builder_original.py  enhanced_query.py  errors.py  examples.py  expr_parser.py  generators.py  graph.py  graph_table.py  imports.py  jupyter_utils.py  networkx_compat.py  pipeline.py  query_parser.py  table_extensions.py  types.py  viz.py
python-groggy/python/groggy/algorithms/: __init__.py  base.py  centrality.py  community.py  pathfinding.py
python-groggy/python/groggy/builder/: __init__.py  algorithm_builder.py  decorators.py  examples.py  examples.py.bak  varhandle.py
python-groggy/python/groggy/builder/execution/: __init__.py  context.py
python-groggy/python/groggy/builder/ir/: __init__.py  analysis.py  batch.py  graph.py  memory.py  nodes.py  optimizer.py  parallel.py
python-groggy/python/groggy/builder/traits/: __init__.py  attr.py  core.py  graph.py  (+1 more)
python-groggy/python/groggy/display/: README.md  __init__.py  array_display.py  demo.py  formatters.py  integration_example.py  matrix_display.py  table_display.py  test_simple.py  truncation.py  unicode_chars.py
python-groggy/python/groggy/labextension/: extension.d.ts  index.d.ts  index.js  index.js.map  package.json  plugin.d.ts  plugin.js  plugin.js.map  widget.d.ts
python-groggy/python/groggy/nbextension/: index.js  index.js.map
python-groggy/python/groggy/static/: __init__.py  groggy-viz-core.standalone.js  groggy-widget.js
python-groggy/python/groggy/style/: __init__.py  style_system.py
python-groggy/python/groggy/widgets/: __init__.py  graph_widget.py  widget_loader.py  widget_view.js
python-groggy/src/: lib.rs  lib_old.rs  module.rs  utils.rs
python-groggy/src/core/: table.rs
python-groggy/src/display/: array_formatter.rs  matrix_formatter.rs  mod.rs  unicode_chars.rs
python-groggy/src/ffi/: config.rs  convert.rs  display.rs  errors.rs  experimental.rs  mod.rs  temporal.rs  types.rs  utils.rs  viz_accessor.rs
python-groggy/src/ffi/api/: graph.rs  graph_analysis.rs  graph_analytics.rs  graph_attributes.rs  graph_core.rs  graph_matrix.rs  graph_query.rs  graph_version.rs  mod.rs  pipeline.rs
python-groggy/src/ffi/core/: accessors.rs  array.rs  attributes.rs  component.rs  components.rs  history.rs  matrix.rs  mod.rs  neighborhood.rs  path_result.rs  query.rs  query_parser.rs  subgraph.rs  subgraph_old_complex.rs  table.rs  traversal.rs  views.rs
python-groggy/src/ffi/delegation/: error_handling.rs  examples.rs  forwarding.rs  implementations.rs  mod.rs  traits.rs
python-groggy/src/ffi/display/: mod.rs
python-groggy/src/ffi/entities/: edge.rs  meta_edge.rs  meta_node.rs  mod.rs  node.rs
python-groggy/src/ffi/neural/: activations.rs  mod.rs
python-groggy/src/ffi/query/: mod.rs  query.rs  query_parser.rs
python-groggy/src/ffi/storage/: accessors.rs  array.rs  array.rs.backup  array_array.rs  bool_array.rs  components.rs  edges_array.rs  matrix.rs  matrix_array.rs  mod.rs  nodes_array.rs  num_array.rs  simple_stats_array.rs  stats_array.rs  subgraph_array.rs  table.rs  table_array.rs  table_array_core.rs  views.rs
python-groggy/src/ffi/subgraphs/: component.rs  composer.rs  hierarchical.rs  mod.rs  neighborhood.rs  subgraph.rs
python-groggy/src/ffi/traits/: mod.rs  subgraph_operations.rs
python-groggy/src/ffi/utils/: convert.rs  indexing.rs  matrix_indexing.rs  mod.rs  utils.rs
python-groggy/src/ffi/viz/: mod.rs
(+1063 files in other folders)
