[package]
name = "groggy"
version = "0.1.0"
edition = "2021"
description = "Groggy - A Graph Language Engine for dynamic graphs and versioned state"
license = "MIT"
homepage = "https://github.com/rollingstorms/groggy"
repository = "https://github.com/rollingstorms/groggy"
documentation = "https://groggy.readthedocs.io"

[lib]
name = "groggy"
crate-type = ["rlib"]


[[bin]]
name = "stress_test_rust"
path = "stress_test_rust.rs"

[dependencies]
fastrand = "2.0"
# pyo3 = { version = "0.20", features = ["extension-module"] } # Moved to python-groggy
petgraph = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
parking_lot = "0.12"  # High-performance locks
dashmap = "5.4"       # Concurrent HashMap
ahash = "0.8"         # Fast hash algorithm
bitvec = "1.0"        # Efficient bit vectors for indexing
wide = "0.7"          # SIMD operations
