[package]
name = "groggy"
version = "0.3.1"
edition = "2021"
description = "Groggy - High-performance graph analytics engine with unified storage views (Arrays, Matrices, Tables)"
license = "MIT"
homepage = "https://github.com/rollingstorms/groggy"
repository = "https://github.com/rollingstorms/groggy"
documentation = "https://groggy.readthedocs.io"

[lib]
name = "groggy"
crate-type = ["rlib"]

[dependencies]
fastrand = "2.0"
# pyo3 = { version = "0.20", features = ["extension-module"] } # Moved to python-groggy
petgraph = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
parking_lot = "0.12"  # High-performance locks
dashmap = "5.4"       # Concurrent HashMap
ahash = "0.8"         # Fast hash algorithm
bitvec = "1.0"        # Efficient bit vectors for indexing
wide = "0.7"          # SIMD operations
console = "0.15"      # Console utilities for display
csv = "1.3"           # CSV reading/writing
chrono = { version = "0.4", features = ["serde"] } # Date/time handling

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
