[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "groggy"
description = "Groggy - A Graph Language Engine for dynamic graphs and versioned state"
version = "0.2.0"
requires-python = ">=3.8"
authors = [
    { name = "Groggy Contributors" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["graph", "network", "data-structure", "algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark",
    "networkx",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/your-org/groggy"
Repository = "https://github.com/your-org/groggy"
Documentation = "https://groggy.readthedocs.io"

[tool.maturin]
python-source = "python"
module-name = "groggy._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
