[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "groggy"
description = "Groggy - A Graph Language Engine for dynamic graphs and versioned state"
version = "0.3.0"
requires-python = ">=3.8"
authors = [
    { name = "Groggy Contributors" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["graph", "network", "data-structure", "algorithms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-benchmark",
    "networkx",
    "numpy",
    "matplotlib",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autoapi>=3.0.0",
    "pygments>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/rollingstorms/groggy"
Repository = "https://github.com/rollingstorms/groggy"
Documentation = "https://groggy.readthedocs.io"

[tool.maturin]
python-source = "python-groggy/python"
module-name = "groggy._groggy"
bindings = "pyo3"
manifest-path = "python-groggy/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
