[package]
name = "python-groggy"
version = "0.3.1"
edition = "2021"

[lib]
name = "groggy"
crate-type = ["cdylib"]

[lints.rust]
non_local_definitions = "allow"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
groggy = { path = "../" }  # Path to the main Rust library
serde_json = "1.0"
