[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "groggy"
version = "0.4.0"
description = "High-performance graph analytics library with Rust core"
authors = [
    {name = "Groggy Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["description"]

[tool.maturin]
python-source = "python"
module-name = "groggy.groggy"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "numpy",
    "pandas"
]