[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "groggy"
version = "0.5.0"
description = "High-performance graph analytics library with Rust core"
authors = [
    {name = "Groggy Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["description"]

[tool.maturin]
python-source = "python"
module-name = "groggy._groggy"
bindings = "pyo3"
features = ["pyo3/extension-module"]
include = [
    "python/groggy/labextension/**/*"
]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "numpy",
    "pandas"
]
widgets = [
    "ipywidgets>=7.6.0",
    "jupyterlab>=3.0.0"
]
