[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "groggy"
version = "0.5.1"
description = "High-performance graph analytics library with Rust core"
readme = "../README.md"
authors = [
    {name = "Groggy Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["description"]

[project.urls]
Homepage = "https://github.com/rollingstorms/groggy"
Documentation = "https://rollingstorms.github.io/groggy/"
Repository = "https://github.com/rollingstorms/groggy"
"Bug Tracker" = "https://github.com/rollingstorms/groggy/issues"
Changelog = "https://github.com/rollingstorms/groggy/releases"

[tool.maturin]
python-source = "python"
module-name = "groggy._groggy"
bindings = "pyo3"
features = ["pyo3/extension-module"]
include = [
    "python/groggy/labextension/**/*"
]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "numpy",
    "pandas"
]
widgets = [
    "ipywidgets>=7.6.0",
    "jupyterlab>=3.0.0"
]
